--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img src="INGREDIENTES.png" style="height:800px">
+    <img src="Press.pdf" style="height:800px">
     
 </body>
 </html>
