--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <img src="Press.pdf" style="height:800px">
+    <enbed src="PRES.pdf" width= "500" height="375"
+    type="application/pdf">
+    <object class="pdfview"  type="application/pdf" data=""></object>
     
 </body>
 </html>
